--- a/rustcassonne/Cargo.toml
+++ b/rustcassonne/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = { version = "0.10.1", features = ["dynamic_linking"] }
-bevy_eventlistener = "0.2.2"
-bevy_mod_picking = "0.14.0"
+bevy = { version = "0.11.2", features = ["dynamic_linking"] }
+bevy_eventlistener = "0.3.0"
+bevy_mod_picking = "0.15.0"
+bevy_mod_raycast = "0.13.1"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
