--- a/rustcassonne/Cargo.toml
+++ b/rustcassonne/Cargo.toml
@@ -8,6 +8,7 @@ bevy = { version = "0.11.2", features = ["dynamic_linking"] }
 bevy_eventlistener = "0.3.0"
 bevy_mod_picking = "0.15.0"
 bevy_mod_raycast = "0.13.1"
+petgraph = "0.6.4"
 rand = "0.8.5"
 
 # Enable a small amount of optimization in debug mode
